syntax = "proto3";

package response;

option java_multiple_files = true;
option java_package = "grpc.account.v2.dto.response";

import "account/v2/dto/response/profile-response.proto";

message GetProfileByEmailResponse {
  response.ProfileResponse profile = 2;
}